Update overflow: hidden to prevent scrolling.

--- a/css/focus-flow-main.css
+++ b/css/focus-flow-main.css
@@ -222,7 +222,9 @@ header {
     width: 100%;
     height: 100%;
     background-color: rgb(0 0 0 / 50%);;
-    overflow: auto;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
 }
 
 .modal {
